Fix overlap of Area column header in ROI table

--- a/css/app.css
+++ b/css/app.css
@@ -932,7 +932,7 @@ thumbnail-slider img {
     padding-right: 8px;
 }
 .shape-area {
-    width: 64px;
+    width: 66px;
     flex: 0 0 auto;
 }
 .shape-length {
